# aplikacje-mobilne-backend

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  fly.toml  pyproject.toml
app/: main.py  models.py  schemas.py
